# agendify

./: .env  .gitignore  README.md  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml
backend/src/: main.py
backend/src/alembic/versions/: 1574cb173942_upgrade_unique_for_false_of_appontments_.py  4c6d1cba0b15_added_profileavatarid_column_for_users_.py  4d1237412a73_modified_appointments_table_add_.py  5f61036d9525_added_phone_number_column_for_users_.py  (+8 more)
backend/src/controllers/: appointment.py  auth.py  availabilities.py  customers.py
backend/src/models/: appointments.py  availabilities.py  customers.py  refresh_tokens.py  users.py
backend/src/schemas/: email.py  user.py
backend/src/services/: auth.py  customer.py  mail_service.py
backend/src/views/: appointment.py  auth.py  availabilities.py  customer.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  store.ts
frontend/src/api/: api.ts  appointmentApi.ts  authApi.ts  availability.ts  customer.ts  routes.ts
frontend/src/lib/: utils.ts
frontend/src/services/: authApi.ts  routes.ts
src/: .env  alembic.ini  database.py  main.py
src/alembic/: env.py
src/alembic/versions/: 22df1dad2e26_modified_appointments_table.py  746eff346c05_modified_availabilities_table.py  e27c3a269652_create_initial_tables.py  ef1b4f43abf8_add_profession_column_in_the_users_table.py
src/controllers/: auth.py
src/models/: appointments.py  availabilities.py  users.py
src/services/: auth.py  token.py
src/views/: auth.py  availabilities.py
(+88 files in other folders)
